--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 I am interested in learning github and deep learning in this course.
 I am working on github these days.
 My favorite hobby is playing table tennis.
+
+I have finished this course.
